fix for my course

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 encoding: utf-8
 markdown: redcarpet
-baseurl: /jekyll-course-template
-url: p2pu.github.io/jekyll-course-template/
+baseurl: /BIO181G
+url: SchwartzLabURI.github.io/BIO181G/
 permalink: /:title/
-ga_tracking_code: UA-5757664-17
-disqus_shortname: jekyllcoursetemplate
+disqus_shortname: BIO181G
 prose:
   media: /img
   ignore:
