--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,4 +1,4 @@
-title: "DIY U: Build a Personal Learning Plan"
+title: "BIO 181G: The information age"
 language: en
 image: /img/diy-u/thumb.jpg
 based_on: http://p2pu.org/en/groups/diy-u/
