--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ prose:
     - /fonts
     - /js
   metadata:
-    _posts:
+    _posts/weeks:
       - name: "layout"
         field:
           element: "hidden"
@@ -26,3 +26,17 @@ prose:
         field:
           element: "hidden"
           value: "content"
+    _posts/info:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "info"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+          value: ""
+      - name: "category"
+        field:
+          element: "hidden"
+          value: "info"
