--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 encoding: utf-8
-baseurl: /BIO181G
-url: SchwartzLabURI.github.io/BIO181G/
+baseurl: /BigDataAnalysis18
+url: rachelss.github.io/BigDataAnalysis18/
 permalink: /:title/
-disqus_shortname: BIO181G
+disqus_shortname: BigDataAnalysis18
 prose:
   media: /img
   ignore:
